# DeepVision-AI

./: .gitignore  LICENCE.md  README.md  concept.py  main.py  package-lock.json  pyproject.toml
admin/: index.html  package-lock.json  package.json
admin/src/components/: Commingsoonoverlay.tsx
admin/src/pages/: LoginScreen.tsx  SystemsManagementScreen.tsx  UserProfileScreen.tsx  ViewSystemScreen.tsx
admin/src/types/: system.ts
architecture/: architecture.md  main.py  plan.md
architecture/deepface_utils/: architecture.md  recognition.py
architecture/facecomparer_utils/: compare.py
architecture/supabase/: architecture.md  main.py
architecture/supabase/auth/: register.py
architecture/supabase_utils/: architecture.md
architecture/supabase_utils/auth/: architecture.md  login.py  logout.py  register.py  session.py  user.py
architecture/supabase_utils/db/: architecture.md  (+4 more)
architecture/transformers_utils/: main.py
architecture/utils/: b64_to_image.py
backend/: main.py
backend/docs/: delete.md  get.md  post.md  put.md
client/: index.html  package-lock.json  package.json
client/electron/: index.html  main.cjs
client/src/: App.tsx  index.css  main.tsx
fe-backup (do not touch)/: index.html
fe-backup (do not touch)/src/: App.tsx
frontend/: package-lock.json  package.json
frontend (backup)/: package-lock.json
frontend (backup)/src/: index.css
frontend/DeepVision Prototype/: README.md  index.html  package-lock.json  package.json
frontend/electron/: main.cjs
frontend/src/: App.tsx  index.css  main.tsx
testing/: urltobase64.py
(+45 files in other folders)
